--- a/styles/style.css
+++ b/styles/style.css
@@ -839,6 +839,14 @@ header nav .dropdown ul a:focus {
   padding: 2rem;
   border: none;
   border-bottom: 2px solid #50E3C2;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.blog footer form div input:hover,
+.blog footer form div input:focus,
+.blog footer form div input:active {
+  background: #D2F9F1;
 }
 
 .blog footer form textarea {
@@ -847,6 +855,14 @@ header nav .dropdown ul a:focus {
   border: 2px solid #50E3C2;
   padding: 2rem;
   margin: 3rem 0;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.blog footer form textarea:hover,
+.blog footer form textarea:focus,
+.blog footer form textarea:active {
+  background: #D2F9F1;
 }
 
 .blog footer form button {
@@ -935,12 +951,28 @@ header nav .dropdown ul a:focus {
   border-bottom: 2px solid #50E3C2;
 }
 
+.contact .wrapper form div input:hover,
+.contact .wrapper form div input:focus,
+.contact .wrapper form div input:active {
+  background: #D2F9F1;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
 .contact .wrapper form textarea {
   width: 100%;
   background: #FAFFFE;
   border: 2px solid #50E3C2;
   padding: 2rem;
   margin: 3rem 0;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.contact .wrapper form textarea:hover,
+.contact .wrapper form textarea:focus,
+.contact .wrapper form textarea:active {
+  background: #D2F9F1;
 }
 
 .contact .wrapper form button {
@@ -1006,19 +1038,19 @@ header nav .dropdown ul a:focus {
   header nav .logo {
     font-size: calc(1.39rem + 3.66vw);
   }
-  header nav .dropdown {
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-  }
   header nav .dropdown .fas {
     display: block;
   }
   header nav .dropdown ul {
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     position: fixed;
     background: #FAFFFE;
-    position: absolute;
+    display: inline-block;
+    margin: 0;
     z-index: 20;
     right: -100rem;
+    border-radius: 10px;
   }
   header nav .dropdown ul li {
     width: 13rem;
@@ -1027,10 +1059,12 @@ header nav .dropdown ul a:focus {
   }
   header nav .dropdown ul li a {
     color: #2C2C2C;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
   }
   header nav .dropdown ul li a:hover,
   header nav .dropdown ul li a:focus {
-    font-size: 2.2rem;
+    font-size: 2rem;
     font-weight: bold;
     background: none;
   }
@@ -1039,9 +1073,7 @@ header nav .dropdown ul a:focus {
   header nav .dropdown:active > ul {
     position: absolute;
     right: 0;
-    top: 2.5rem;
     display: inline-block;
-    margin: 0;
   }
   .home header .logo span {
     padding: 0 0.5rem;
